--- a/euro-bet/appsettings.json
+++ b/euro-bet/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=SQL5097.site4now.net;Initial Catalog=db_9e3ec8_euro;User Id=db_9e3ec8_euro_admin;Password=iam@Euro2020"
+  }
 }
